@@ -1,0 +1,9 @@
+import React from "react";
+
+export default function Header() {
+  return (
+    <div>
+      <h1>Temp</h1>
+    </div>
+  );
+}
