@@ -10,3 +10,8 @@
 - Created routes file to export various navigation routes
 - Created Navbar.jsx file and added various routes + navigation to app.js file
 - Created blank pages for navigation routes to load something.
+
+1/24/2022
+
+- Added to REFERENCES.md
+- Added hero/header section to main page
